# backgammon

./: .cirrus.yml  .gitignore  COPYRIGHT  Cargo.toml  LICENSE  Makefile  README.md  bitbucket-pipelines.yml  build.sh
src/: bg_error.rs  bg_game.rs  bg_match.rs  bg_players.rs  bg_rules.rs  bg_statistics.rs  cube.rs  dice.rs  error.rs  game.rs  lib.rs  match.rs  player.rs  rules.rs  state.rs
src/rules/: board.rs  cube.rs  dices.rs  player.rs
