[package]
name = "backgammon"
version = "0.5.0"
authors = ["Carlo Strub <cs@carlostrub.ch>"]
edition = "2021"
description = "The Rust Backgammon library"
documentation = "https://docs.rs/backgammon"
readme = "README.md"
repository = "https://bitbucket.org/carlostrub/backgammon/src/master"
license = "BSD-2-Clause"
keywords = ["backgammon","gamedev"]
categories = ["game-development"]

[badges]
bitbucket-pipelines = { repository = "carlostrub/backgammon", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.8"
uuid = { version = "1.2.1", features = ["v4"] }
