[package]
name = "backgammon"
version = "0.5.1"
authors = ["Carlo Strub <cs@carlostrub.ch>"]
edition = "2021"
description = "The Rust Backgammon library"
documentation = "https://docs.rs/backgammon"
readme = "README.md"
repository = "https://github.com/carlostrub/backgammon"
license = "BSD-2-Clause"
keywords = ["backgammon","gamedev"]
categories = ["game-development"]

[badges]
bitbucket-pipelines = { repository = "carlostrub/backgammon", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
couch_rs = "0.9.2"
rand = "0.8"
serde = "1.0.160"
uuid = { version = "1.2.1", features = ["v4"] }
