[package]
name = "backgammon"
version = "0.5.1"
authors = ["Carlo Strub <cs@carlostrub.ch>"]
edition = "2021"
description = "The Rust Backgammon library"
documentation = "https://docs.rs/backgammon"
readme = "README.md"
repository = "https://github.com/carlostrub/backgammon"
license = "BSD-2-Clause"
keywords = ["backgammon","gamedev"]
categories = ["game-development"]
exclude = ["Makefile"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
